# qrscan

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: capture.rs  commands.rs  content_type.rs  history.rs  ics_sanitizer.rs  keychain.rs  lib.rs  main.rs  security.rs  shortcuts.rs  tray.rs
src/components/: ConfirmDialog.tsx  HistoryEntry.tsx  HistoryPanel.tsx  NoQrFound.tsx  Onboarding.tsx  ResultPanel.tsx  SettingsPanel.tsx  Toast.tsx
src/lib/: decoder.ts  decoder.worker.ts  types.ts
src/styles/: globals.css
