[package]
name = "qrsnap"
version = "0.1.0"
edition = "2021"

[lib]
name = "qrsnap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "qrsnap"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-store = "2.4.2"
tauri-plugin-shell = "2.3.5"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
opener = "0.7"
urlencoding = "2.1"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
